--- a/UltraSidebar/UltraSidebarWindows.csproj
+++ b/UltraSidebar/UltraSidebarWindows.csproj
@@ -77,6 +77,12 @@
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="OxyPlot, Version=2.0.0.0, Culture=neutral, PublicKeyToken=638079a8f0bd61e9, processorArchitecture=MSIL">
+      <HintPath>..\packages\OxyPlot.Core.2.0.0\lib\net45\OxyPlot.dll</HintPath>
+    </Reference>
+    <Reference Include="OxyPlot.WindowsForms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=245eacd6b5d2d338, processorArchitecture=MSIL">
+      <HintPath>..\packages\OxyPlot.WindowsForms.2.0.0\lib\net45\OxyPlot.WindowsForms.dll</HintPath>
+    </Reference>
     <Reference Include="PInvoke.Kernel32, Version=0.5.0.0, Culture=neutral, PublicKeyToken=9e300f9f87f04a7a, processorArchitecture=MSIL">
       <HintPath>..\packages\PInvoke.Kernel32.0.5.184\lib\net45\PInvoke.Kernel32.dll</HintPath>
     </Reference>
@@ -129,6 +135,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArchiveResource.cs" />
+    <Compile Include="Src\Behavior\AreaChart.cs" />
+    <Compile Include="Src\Behavior\ChartBase.cs" />
     <Compile Include="Src\ConstsGlobals.cs" />
     <Compile Include="Src\Native\Hooker.cs" />
     <Compile Include="Src\Host.cs" />
@@ -143,10 +151,11 @@
     <Compile Include="Src\MainWindow.cs" />
     <Compile Include="Src\Native\Win32Hwnd.cs" />
     <Compile Include="Src\SimpleBSON.cs" />
-    <Compile Include="Src\SidebarWindow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="res\img\config.json" />
+    <None Include="res\img\us.ttf" />
     <None Include="res\index.html" />
     <None Include="res\lib_settings\settings.tis" />
     <None Include="res\tis\menu.tis" />
@@ -169,26 +178,18 @@
       <Link>DynamicHook.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="res\widgets\dolar.html" />
     <None Include="Resources\note.ico" />
     <Content Include="res\css\global.css" />
     <Content Include="res\css\srs.css" />
     <Content Include="res\css\htmlarea.css" />
     <Content Include="res\dlg_about.html" />
-    <Content Include="res\img\banner.png" />
-    <Content Include="res\img\bullet.png" />
-    <Content Include="res\img\check.png" />
-    <Content Include="res\img\close.svg" />
-    <Content Include="res\img\dots-horizontal.svg" />
-    <Content Include="res\img\format-bold.svg" />
-    <Content Include="res\img\format-strikethrough-variant.svg" />
-    <Content Include="res\img\horizontal-rule.svg" />
-    <Content Include="res\img\ios-plus-empty.svg" />
-    <Content Include="res\img\italic.svg" />
-    <Content Include="res\img\list.svg" />
-    <Content Include="res\img\logo_mi.png" />
-    <Content Include="res\img\more-button-of-three-dots.svg" />
-    <Content Include="res\img\underline-669.svg" />
     <None Include="res\tis\keyboard.tis" />
+    <Content Include="res\img\IconBundler.exe" />
+    <Content Include="res\img\sciter.dll" />
+    <Content Include="res\img\svg\window-close.svg" />
+    <Content Include="res\img\us-font.css" />
+    <Content Include="res\img\us-svg.css" />
     <Content Include="res\lib_menu\menu-chrome.css" />
     <Content Include="res\lib_menu\toggler2.css" />
     <Content Include="res\lib_menu\unittes.html" />
