--- a/UltraSidebar/packages.config
+++ b/UltraSidebar/packages.config
@@ -4,6 +4,8 @@
   <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.3.3" targetFramework="net461" />
   <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.3.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
+  <package id="OxyPlot.Core" version="2.0.0" targetFramework="net461" />
+  <package id="OxyPlot.WindowsForms" version="2.0.0" targetFramework="net461" />
   <package id="PInvoke.Kernel32" version="0.5.184" targetFramework="net45" />
   <package id="PInvoke.User32" version="0.5.184" targetFramework="net45" />
   <package id="PInvoke.Windows.Core" version="0.5.184" targetFramework="net45" />
