--- a/UltraSidebar/packages.config
+++ b/UltraSidebar/packages.config
@@ -1,19 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="LiteDB" version="4.1.4" targetFramework="net461" />
-  <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.3.3" targetFramework="net461" />
-  <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.3.3" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
-  <package id="OxyPlot.Core" version="2.0.0" targetFramework="net461" />
-  <package id="OxyPlot.WindowsForms" version="2.0.0" targetFramework="net461" />
-  <package id="PInvoke.Kernel32" version="0.5.184" targetFramework="net45" />
-  <package id="PInvoke.User32" version="0.5.184" targetFramework="net45" />
-  <package id="PInvoke.Windows.Core" version="0.5.184" targetFramework="net45" />
-  <package id="PInvoke.Windows.ShellScalingApi" version="0.5.184" targetFramework="net45" />
-  <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net461" />
+  <package id="CliWrap" version="2.5.0" targetFramework="net45" />
+  <package id="LiteDB" version="4.1.4" targetFramework="net45" />
+  <package id="OxyPlot.Core" version="2.0.0" targetFramework="net45" />
+  <package id="OxyPlot.WindowsForms" version="2.0.0" targetFramework="net45" />
+  <package id="PInvoke.Kernel32" version="0.6.6" targetFramework="net45" />
+  <package id="PInvoke.User32" version="0.6.6" targetFramework="net45" />
+  <package id="PInvoke.Windows.Core" version="0.6.6" targetFramework="net45" />
+  <package id="PInvoke.Windows.ShellScalingApi" version="0.6.6" targetFramework="net45" />
+  <package id="SciterSharpWindows" version="2.0.85" targetFramework="net45" />
   <package id="Validation" version="2.4.22" targetFramework="net45" />
 </packages>
